# SourcePan

./: .gitignore  CMakeLists.txt  LICENSE  Levenshtein.cpp  Recipe.cpp  Recipe.hpp  SRCPANmngr.cpp  SRCPANmngr.hpp  devlog.txt
inih/: INIReader.cpp  INIReader.h
src/: Levenshtein.cpp  Recipe.cpp  RecipeMaker.cpp  SRCPANmngr.cpp  main.cpp
src/headers/: Levenshtein.hpp  Recipe.hpp  SRCPANmngr.hpp
